# nexadb

./: .dockerignore  .gitignore  .npmignore  AUTHENTICATION.md  BENCHMARK_RESULTS.md  BINARY_PROTOCOL_COMPLETE.md  BINARY_PROTOCOL_PLAN.md  BINARY_PROTOCOL_PROGRESS.md  BINARY_PROTOCOL_SPEC.md  BUILD_YOUR_OWN_DATABASE.md  CLAUDE_CONTEXT.md  CLIENT_GUIDE.md  COMPARISON_GUIDE.md  CURRENT_STATE.md  DEPLOY_DOCKER.md  DEPLOY_RAILWAY.md  DEPLOY_RENDER.md  DEPLOY_VERCEL.md  Dockerfile  FINAL_SUMMARY.md  GET_STARTED.md  HOMEBREW_GUIDE.md  HOMEBREW_SETUP_GUIDE.md  IMPROVEMENTS_COMPLETED.md  INSTALLATION.md  INSTALLATION_SUCCESS.md  INSTALL_NPM.md  LAUNCH_PROFESSIONAL_UI.md  MANIFEST.in  NEW_UI_FEATURES.md  PROFESSIONAL_DESIGN_SYSTEM.md  PROJECT_SUMMARY.md  PUBLISHING_CHECKLIST.md  QUICKSTART.md  QUICK_START_DARK_THEME.md  QUICK_START_HOMEBREW.md  README.md  README_INSTALLATION.md  START_HERE.md  THEME_UPDATE_SUMMARY.md  (+58 more)
.github/workflows/: release.yml
YCSB_BENCHMARK/: README.md  nexadb.properties  pom.xml
YCSB_BENCHMARK/workloads/: workload_nexadb  workloada  workloadb  workloadc  workloadd  workloade  workloadf
admin_panel/: index.html  login.html
admin_panel/css/: styles.css
admin_panel/js/: app.js  auth.js
examples/NotesApp/: .env.example  .gitignore  README.md  main.py  package.json  requirements.txt
nexadb-cli-rust/: .gitignore  Cargo.toml  build.sh
nexadb-cli-rust/.github/workflows/: release.yml
nexadb-cli-rust/src/: main.rs
scripts/: postinstall.js
tests/: README.md  conftest.py
veloxdb_data/: sstable_1763918791766.data  sstable_1763918791766.index
(+28 files in other folders)
