[package]
name = "nexadb-cli"
version = "2.0.0"
edition = "2021"
authors = ["NexaDB Team <team@nexadb.dev>"]
description = "Interactive CLI for NexaDB - The database for AI developers"
license = "MIT"
repository = "https://github.com/krishcdbry/nexadb"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
rustyline = "14.0"
rpassword = "7.3"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
dirs = "5.0"

[[bin]]
name = "nexadb"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols for smaller binary
