[package]
name = "nexadb-cli"
version = "3.0.0"
edition = "2021"
authors = ["Krish <krishcdbry@gmail.com>"]
description = "Interactive CLI for NexaDB - The database for AI developers"
license = "MIT"
repository = "https://github.com/krishcdbry/nexadb"
homepage = "https://nexadb.io"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
rustyline = "14.0"
rpassword = "7.3"
colored = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack
anyhow = "1.0"
dirs = "5.0"

[[bin]]
name = "nexa"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Strip symbols for smaller binary
